Avoid red-green contrast.

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ a {
 
 a:hover {
     text-decoration: none;
-    color: red;
+    color: #85a955;
 }
 
 #logo {
